[gd_scene load_steps=15 format=2]

[ext_resource path="res://InteractiveItems/Engine/Engine.gd" type="Script" id=1]
[ext_resource path="res://InteractiveItems/Engine/textures/engine.png" type="Texture" id=2]
[ext_resource path="res://InteractiveItems/Engine/textures/ctrl_prompt.png" type="Texture" id=3]
[ext_resource path="res://InteractiveItems/Engine/textures/warning.png" type="Texture" id=4]
[ext_resource path="res://InteractiveItems/Engine/Propeller.tscn" type="PackedScene" id=5]
[ext_resource path="res://Player/DustEffect.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("EngineSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("EngineSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=3]
resource_name = "broken"
tracks/0/type = "value"
tracks/0/path = NodePath("EngineSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "working"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("EngineSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.6, 0.6 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "one"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "three"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=8]
resource_name = "two"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[node name="Engine" type="Area2D" groups=["repairable"]]
collision_layer = 2
script = ExtResource( 1 )
Dust = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = SubResource( 1 )

[node name="EngineSprite" type="Sprite" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 2 )
hframes = 8
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/broken = SubResource( 3 )
anims/working = SubResource( 4 )

[node name="ButtonTip" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -23 )
texture = ExtResource( 3 )

[node name="BreakDownTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="BrokenDownTimer" type="Timer" parent="."]

[node name="Warning" type="Sprite" parent="."]
position = Vector2( 0, -21 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 4 )
hframes = 3

[node name="WarningAnimationPlayer" type="AnimationPlayer" parent="Warning"]
anims/RESET = SubResource( 5 )
anims/one = SubResource( 6 )
anims/three = SubResource( 7 )
anims/two = SubResource( 8 )

[node name="Propeller" parent="." instance=ExtResource( 5 )]
position = Vector2( -40, -1 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -3, -9 )

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( 5, -6 )

[connection signal="body_entered" from="." to="." method="_on_InteractiveScene_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_InteractiveScene_body_exited"]
[connection signal="timeout" from="BreakDownTimer" to="." method="_on_BreakDownTimer_timeout"]
[connection signal="timeout" from="BrokenDownTimer" to="." method="_on_BrokenDownTimer_timeout"]
